--- a/start.html
+++ b/start.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
     <title>Play</title>
 </head>
 <body>
@@ -25,9 +25,9 @@
 		</div>
 		<div class="game">
 			<div class="choices">
-				<img src="/rock.png" alt="Rock" id="rock">
-				<img src="/paper.png" alt="Paper" id="paper">
-				<img src="/scissors.png" alt="Scissors" id="scissors">
+				<img src="./assets/rock.png" alt="Rock" id="rock">
+				<img src="./assets/paper.png" alt="Paper" id="paper">
+				<img src="./assets/scissors.png" alt="Scissors" id="scissors">
 			</div>
 			<div class="result">
 				<div class="result-container">
@@ -40,9 +40,9 @@
 		</div>
 		<div class="rules">
 			<h2>Rules</h2>
-			<p><img src="/rock.png" alt="Rock" id="rock" width="50px" height="50px"> beats <img src="/scissors.png" alt="Scissors" id="scissors" width="50px" height="50px"></p>
-			<p><img src="/paper.png" alt="paper" id="paper" width="50px" height="50px"> beats <img src="/rock.png" alt="rock" id="rock" width="50px" height="50px"></p>
-			<p><img src="/scissors.png" alt="scissors" id="scissors" width="50px" height="50px"> beats <img src="/paper.png" alt="paper" id="paper" width="50px" height="50px"</p>
+			<p><img src="./assets/rock.png" alt="Rock" id="rock" width="50px" height="50px"> beats <img src="./assets/scissors.png" alt="Scissors" id="scissors" width="50px" height="50px"></p>
+			<p><img src="./assets/paper.png" alt="paper" id="paper" width="50px" height="50px"> beats <img src="./assets/rock.png" alt="rock" id="rock" width="50px" height="50px"></p>
+			<p><img src="./assets/scissors.png" alt="scissors" id="scissors" width="50px" height="50px"> beats <img src="./assets/paper.png" alt="paper" id="paper" width="50px" height="50px"</p>
 		</div>
 	</div>
 	<script src="app.js"></script>
